adapt user service to user authentication and krakend
