# user/internal/api.go
@@ -3,6 +3,7 @@ package api
 import (
 	"context"
 	"errors"
+	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 	"github.com/google/uuid"
@@ -45,6 +46,78 @@ func (api *UserApi) ConfigureRouter(router chi.Router) {
 	router.Mount("/", handler)
 }
 
+func checkUserId(userIdPath uuid.UUID, userIdHeader uuid.UUID) bool {
+	return userIdPath == userIdHeader
+}
+
+func (api *UserApi) DeleteUser(w http.ResponseWriter, r *http.Request, userId openapi_types.UUID, params DeleteUserParams) {
+	if !checkUserId(userId, params.XUser) {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	user, err := api.userService.DeleteUser(userId)
+	if err != nil {
+		if errors.Is(err, internal.NotFoundError(userId)) {
+			internal.ReplyWithError(w, r, err, http.StatusNotFound)
+		} else {
+			internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
+		}
+		return
+	}
+
+	internal.ReplyWithStatusOkWithJSON(w, r, UserResponseFromUser(user))
+}
+
+func (api *UserApi) FollowUser(w http.ResponseWriter, r *http.Request, userId openapi_types.UUID, params FollowUserParams) {
+	if !checkUserId(userId, params.XUser) {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	var createFollowerRequest CreateFollowerRequest
+	err := render.Decode(r, &createFollowerRequest)
+	if err != nil {
+		internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
+		return
+	}
+
+	user, err := api.followerService.FollowUser(context.Background(), userId, createFollowerRequest.Id)
+	if err != nil {
+		if errors.Is(err, ifollowers.SelfFollowError) {
+			internal.ReplyWithError(w, r, err, http.StatusBadRequest)
+		} else {
+			internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
+		}
+		return
+	}
+
+	internal.ReplyWithStatusWithJSON(w, r, http.StatusOK, UserResponseFromUser(user))
+}
+
+func (api *UserApi) UnfollowUser(w http.ResponseWriter, r *http.Request, userId openapi_types.UUID, followerUserId openapi_types.UUID, params UnfollowUserParams) {
+	if !checkUserId(userId, params.XUser) {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	err := api.followerService.UnfollowUser(context.Background(), userId, followerUserId)
+	if err != nil {
+		if errors.Is(err, ifollowers.SelfFollowError) {
+			internal.ReplyWithError(w, r, err, http.StatusBadRequest)
+		} else if errors.Is(err, internal.NotFoundError(userId)) {
+			internal.ReplyWithError(w, r, err, http.StatusNotFound)
+		} else if errors.Is(err, internal.NotFoundError(followerUserId)) {
+			internal.ReplyWithError(w, r, err, http.StatusNotFound)
+		} else {
+			internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
+		}
+		return
+	}
+
+	internal.ReplyWithStatusOk(r)
+}
+
 func (api *UserApi) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var createUserRequest CreateUserRequest
 	err := render.Decode(r, &createUserRequest)
@@ -60,17 +133,7 @@ func (api *UserApi) CreateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	internal.ReplyWithStatusWithJSON(w, r, http.StatusCreated, user)
-}
-
-func (api *UserApi) DeleteUser(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
-	user, err := api.userService.DeleteUser(userId)
-	if err != nil {
-		internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
-		return
-	}
-
-	internal.ReplyWithStatusOkWithJSON(w, r, UserResponseFromUser(user))
+	internal.ReplyWithStatusWithJSON(w, r, http.StatusCreated, UserResponseFromUser(user))
 }
 
 func (api *UserApi) GetUser(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
@@ -99,7 +162,7 @@ func (api *UserApi) GetFollowees(w http.ResponseWriter, r *http.Request, userId 
 		userResponses[i] = UserResponseFromUser(user)
 	}
 
-	internal.ReplyWithStatusOkWithJSON(w, r, userResponses)
+	internal.ReplyWithStatusOkWithJSON(w, r, UsersResponse{userResponses})
 }
 
 func (api *UserApi) GetFollowers(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
@@ -118,40 +181,5 @@ func (api *UserApi) GetFollowers(w http.ResponseWriter, r *http.Request, userId 
 		userResponses[i] = UserResponseFromUser(user)
 	}
 
-	internal.ReplyWithStatusOkWithJSON(w, r, userResponses)
-}
-
-func (api *UserApi) FollowUser(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
-	var createFollowerRequest CreateFollowerRequest
-	err := render.Decode(r, &createFollowerRequest)
-	if err != nil {
-		internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
-		return
-	}
-
-	user, err := api.followerService.FollowUser(context.Background(), userId, createFollowerRequest.Id)
-	if err != nil {
-		if errors.Is(err, ifollowers.SelfFollowError) {
-			internal.ReplyWithError(w, r, err, http.StatusBadRequest)
-		} else {
-			internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
-		}
-		return
-	}
-
-	internal.ReplyWithStatusWithJSON(w, r, http.StatusOK, UserResponseFromUser(user))
-}
-
-func (api *UserApi) UnfollowUser(w http.ResponseWriter, r *http.Request, userId uuid.UUID, followerUserId uuid.UUID) {
-	err := api.followerService.UnfollowUser(context.Background(), userId, followerUserId)
-	if err != nil {
-		if errors.Is(err, ifollowers.SelfFollowError) {
-			internal.ReplyWithError(w, r, err, http.StatusBadRequest)
-		} else {
-			internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
-		}
-		return
-	}
-
-	internal.ReplyWithStatusOk(r)
+	internal.ReplyWithStatusOkWithJSON(w, r, UsersResponse{userResponses})
 }
